Drug search: fix card table layout bug

--- a/drug_search/css/styles.less
+++ b/drug_search/css/styles.less
@@ -449,6 +449,8 @@
 	font-size: 14px;
 	line-height: 18px;
 
+	display: table;
+
 	width: 100%;
 	margin-bottom: 30px;
 }
